--- a/PoliceEventTracker.App/Views/Shared/_Layout.cshtml
+++ b/PoliceEventTracker.App/Views/Shared/_Layout.cshtml
@@ -31,6 +31,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="DisplayLatestEvents">Senaste</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="TopLocations">Platser</a>
+                        </li>
                     </ul>
                 </div>
             </div>
